--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {clean_files, ["test/*.beam"]}.
 
 {deps, [
-  {cowboy, "0.9.0",
-    {git, "https://github.com/extend/cowboy.git", {tag, "0.9.0"}}},
+  {cowboy, "0.8.6",
+    {git, "http://github.com/lpgauth/cowboy.git", {branch, "send_timeout"}}},
   {erlydtl, "0.8.0",
     {git, "http://github.com/evanmiller/erlydtl.git", {tag, "0.8.0"}}}
 ]}.
